--- a/src/main/webapp/surtir.xhtml
+++ b/src/main/webapp/surtir.xhtml
@@ -28,14 +28,24 @@
     <p:commandButton icon="pi pi-arrow-right" oncomplete="PF('sidebar1').show()"/>
 
     <p:panel header="Lista de Helados disponibles">
-    <p:dataTable var="user" value="#{surtirEmpleadoBean.heladoList}">
-        <p:column headerText="Id">
-            <h:outputText value="#{user.userID}"/>
-        </p:column>
-        <p:column headerText="Nombre">
-            <h:outputText value="#{user.name}"/>
-        </p:column>
-    </p:dataTable>
+        <p:dataTable var="heladoDisponible" value="#{surtirEmpleadoBean.getDisponibleHelados()}">
+            <p:column headerText="Name">
+                <h:outputText value="#{heladoDisponible.name}"/>
+            </p:column>
+            <p:column headerText="Number">
+                <h:outputText value="#{heladoDisponible.number}"/>
+            </p:column>
+            <p:column headerText="Numero a dar">
+                <h:form>
+                    <p:inputText id="Name" value="#{surtirEmpleadoBean.cantidad}" required="true" label="Nombre"/>
+                    <p:commandButton ajax="false"
+                                     value="Dar"
+                                     icon="pi pi-check"
+                                     action="#{surtirEmpleadoBean.sutir(heladoDisponible.heladoID)}"
+                                     style="margin-right:40px"/>
+                </h:form>
+            </p:column>
+        </p:dataTable>
     </p:panel>
 </h:body>
 </html>
