--- a/src/main/webapp/userInfoDinero.xhtml
+++ b/src/main/webapp/userInfoDinero.xhtml
@@ -9,8 +9,7 @@
 
 </h:head>
 
-<h:body>
-
+<h:body style="background-repeat:no-repeat;background-position: center; background-size:1240px; background-image:url('HeladoWeb.png')">
     <p:sidebar widgetVar="sidebar1" baseZIndex="10000">
         <h:form>
             <p:growl>
@@ -43,7 +42,7 @@
                 <h:outputText value="#{helados.number}"/>
             </p:column>
             <p:column headerText="Dinero">
-                <h:outputText value="#{userInfoDineroBean.HeladoPriceSum(helados.heladoID)}"/>
+                <h:outputText value="#{userInfoDineroBean.heladoPriceSum(helados.heladoID)}"/>
             </p:column>
         </p:dataTable>
     </p:panel>
