--- a/src/main/webapp/userInfoDinero.xhtml
+++ b/src/main/webapp/userInfoDinero.xhtml
@@ -46,5 +46,8 @@
             </p:column>
         </p:dataTable>
     </p:panel>
+    <p:panel header="Dinero">
+        <h3>Dinero Total: <h:outputText value="#{userInfoDineroBean.totalGelb()}"/></h3>
+    </p:panel>
 </h:body>
 </html>
