--- a/src/main/webapp/bodegaInfo.xhtml
+++ b/src/main/webapp/bodegaInfo.xhtml
@@ -6,7 +6,7 @@
       xmlns:p="http://primefaces.org/ui">
 
 <h:head>
-
+    <title>Helados Web</title>
 </h:head>
 
 <h:body style="background-repeat:no-repeat;background-position: center; background-size:1240px; background-image:url('HeladoWeb.png')">
@@ -39,6 +39,9 @@
                 <h:outputText value="#{helados.number}"/>
             </p:column>
         </p:dataTable>
+    </p:panel>
+    <p:panel header="Dinero">
+        <h3>Dinero Total: <h:outputText value="#{bodegaInfoBean.totalGelb()}"/></h3>
     </p:panel>
 </h:body>
 </html>
