man soll an der MavenWildfly suchen

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -17,7 +17,7 @@
                     </span>
                     <span class="ui-float-label">
                          <p:password id="Password" value="#{validationBean.password}" label="Password"/>
-                         <p:outputLabel for="@previous" value="Password"/>
+                         <p:outputLabel for="@previous" value="Password_pruebe"/>
                     </span>
                     <div style="position: center">
                     <p:commandButton value="LOGIN" ajax="false" action="#{validationBean.validate}" icon="pi pi-check"
