--- a/src/main/webapp/createUser.xhtml
+++ b/src/main/webapp/createUser.xhtml
@@ -43,7 +43,7 @@
     <p:panel header="Lista de Helados">
         <p:dataTable var="user" value="#{createdUserBean.allUsers}">
             <p:column headerText="Id">
-                <h:outputText value="#{user.userID}"/>
+                <h:outputText value="#{user.ownerID}"/>
             </p:column>
             <p:column headerText="Nombre">
                 <h:outputText value="#{user.name}"/>
