--- a/src/main/webapp/puntoInfo.xhtml
+++ b/src/main/webapp/puntoInfo.xhtml
@@ -1,12 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.org/ui">
 
 <h:head>
-
+    <title>Bodega Info</title>
 </h:head>
 
 <h:body style="background-repeat:no-repeat;background-position: center; background-size:1240px; background-image:url('HeladoWeb.png')">
@@ -17,28 +14,25 @@
             </p:growl>
             <p:panelMenu>
                 <p:submenu label="Optiones">
-                    <p:menuitem value="Home" action="#{createHeladoBean.linkHome}" ajax="false"
+                    <p:menuitem value="Home" action="#{createdUserBean.linkHome}" ajax="false"
                                 icon="pi pi-home"/>
+                    <p:menuitem value="Back" action="#{empleadosInfoBean.linkBack}" ajax="false"
+                                icon="pi pi-arrow-left"/>
                 </p:submenu>
             </p:panelMenu>
         </h:form>
         <p:commandButton value="Cancel" oncomplete="PF('sidebar1').hide()"/>
     </p:sidebar>
-
     <p:commandButton icon="pi pi-arrow-right" oncomplete="PF('sidebar1').show()"/>
 
-    <p:panel header="Lista de Empleados">
-        <p:dataTable var="user" value="#{createdUserBean.allUsers}">
-            <p:column headerText="Id">
-                <h:outputText value="#{user.ownerID}"/>
-            </p:column>
-            <p:column headerText="Nombre">
-                <h:outputText value="#{user.name}"/>
-            </p:column>
-            <p:column headerText="Nombre">
-                <p:commandButton value="Surtir" action="#{surtirEmpleadoBean.linkSurtir(user.ownerID)}"/>
+
+    <p:panel header="Lista de Usuarios disponibles">
+        <p:dataTable var="punto" value="#{puntoInfoBean.allPuntos()}">
+            <p:column headerText="Name">
+                <h:outputText value="#{punto.name}"/>
             </p:column>
         </p:dataTable>
     </p:panel>
+
 </h:body>
 </html>
