--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -24,16 +24,16 @@
                     <p:submenu label="Surtir">
                         <p:menuitem value="Surtir Empleado" action="#{indexBean.linkSurtirEmpleado}" ajax="false"
                                     icon="pi pi-users"/>
-                        <p:menuitem value="Surtir Puntos" action="#{indexBean.linkCrearHelado}" ajax="false"
+                        <p:menuitem value="Surtir Puntos" action="#{indexBean.linkinofPuntos}" ajax="false"
                                     icon="pi pi-plus"/>
                     </p:submenu>
                     <p:separator/>
                     <p:submenu label="Inventario">
-                        <p:menuitem value="Information de Puntos" action="#{indexBean.linkinfoPuntos}" ajax="false"
+                        <p:menuitem value="Information de Puntos" action="#{indexBean.linkinofPuntos}" ajax="false"
                                     icon="pi pi-info"/>
-                        <p:menuitem value="Information de Empleados" action="#{indexBean.linkinfoEmpleados}" ajax="false"
+                        <p:menuitem value="Information de Empleados" action="#{indexBean.linkinofEmpleados}" ajax="false"
                                     icon="pi pi-users"/>
-                        <p:menuitem value="Information de Bodega" action="#{indexBean.linkinfoBodegas}" ajax="false"
+                        <p:menuitem value="Information de Bodega" action="#{indexBean.linkinofBodegas}" ajax="false"
                                     icon="pi pi-plus"/>
                     </p:submenu>
 
