punto de venta Surtir

--- a/src/main/webapp/userInfoDinero.xhtml
+++ b/src/main/webapp/userInfoDinero.xhtml
@@ -47,7 +47,7 @@
         </p:dataTable>
     </p:panel>
     <p:panel header="Dinero">
-        <h3>Dinero Total: <h:outputText value="#{userInfoDineroBean.totalGelb()}"/></h3>
+        <h3>Dinero Total: <h:outputText value="#{userInfoDineroBean.totalMoney()}"/></h3>
     </p:panel>
 </h:body>
 </html>
