--- a/src/main/webapp/surtirEmpleado.xhtml
+++ b/src/main/webapp/surtirEmpleado.xhtml
@@ -36,7 +36,7 @@
                 <h:outputText value="#{user.name}"/>
             </p:column>
             <p:column headerText="Nombre">
-                <p:commandButton value="Surtir" action="#{surtirEmpleadoBean.linkSurtir(user.ownerID)}"/>
+                <p:commandButton value="Surtir" action="#{surtirBean.linkSurtir(user.ownerID)}"/>
             </p:column>
         </p:dataTable>
     </p:panel>
