--- a/src/main/webapp/surtirPunto.xhtml
+++ b/src/main/webapp/surtirPunto.xhtml
@@ -1,12 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.org/ui">
 
 <h:head>
-
+    <title>Bodega Info</title>
 </h:head>
 
 <h:body style="background-repeat:no-repeat;background-position: center; background-size:1240px; background-image:url('HeladoWeb.png')">
@@ -17,9 +14,9 @@
             </p:growl>
             <p:panelMenu>
                 <p:submenu label="Optiones">
-                    <p:menuitem value="Home" action="#{surtirBean.linkHome}" ajax="false"
+                    <p:menuitem value="Home" action="#{createdUserBean.linkHome}" ajax="false"
                                 icon="pi pi-home"/>
-                    <p:menuitem value="Back" action="#{surtirBean.linkBack}" ajax="false"
+                    <p:menuitem value="Back" action="#{empleadosInfoBean.linkBack}" ajax="false"
                                 icon="pi pi-arrow-left"/>
                 </p:submenu>
             </p:panelMenu>
@@ -28,25 +25,24 @@
     </p:sidebar>
     <p:commandButton icon="pi pi-arrow-right" oncomplete="PF('sidebar1').show()"/>
 
-    <p:panel header="Lista de Helados disponibles">
-        <p:dataTable var="heladoDisponible" value="#{surtirBean.getDisponibleHelados()}">
+
+    <p:panel header="Lista de Puntos disponibles">
+        <p:dataTable var="punto" value="#{puntoInfoBean.allPuntos()}">
             <p:column headerText="Name">
-                <h:outputText value="#{heladoDisponible.name}"/>
+                <h:outputText value="#{punto.name}"/>
             </p:column>
-            <p:column headerText="Number">
-                <h:outputText value="#{heladoDisponible.number}"/>
-            </p:column>
-            <p:column headerText="Numero a dar">
+            <p:column headerText="Ver productos del Punto">
                 <h:form>
-                    <p:inputText id="Name" value="#{surtirBean.cantidad}" required="true" label="Nombre"/>
+
                     <p:commandButton ajax="false"
-                                     value="Dar"
-                                     icon="pi pi-check"
-                                     action="#{surtirBean.sutir(heladoDisponible.heladoID)}"
+                                     value="Ver"
+                                     icon="pi pi-arrow-right"
+                                     action="#{puntoInfoBean.puntoFill(punto.ownerID)}"
                                      style="margin-right:40px"/>
                 </h:form>
             </p:column>
         </p:dataTable>
     </p:panel>
+
 </h:body>
 </html>
